--- a/SecurityAndAuthentication/Front/index.html
+++ b/SecurityAndAuthentication/Front/index.html
@@ -45,6 +45,10 @@
             <div class="terms">
                 By creating an account, you agree to our <a href="#terms">Terms & Service</a> and <a href="#privacy">Privacy Policy</a>.
             </div>
+            
+            <div class="form-links">
+                <p>Already have an account? <a href="login.html">Sign in</a></p>
+            </div>
         </form>
     </div>
 
