feat: Implement comprehensive role assignment system
- Add Role property to User model with default 'User' role
- Remove ASP.NET Core Identity dependencies for simpler implementation
- Create AuthController endpoints for role assignment and management
- Add AssignRoleDto for role assignment operations
- Support User, Admin, and Moderator roles
- Update all API responses to include role information
- Create admin.html panel for role management with authentication check
- Update dashboard.html to display user roles and admin panel access
- Add role-based UI features and admin-only functionality
- Implement proper role validation and error handling
- Fix Entity Framework configuration issues

--- a/SecurityAndAuthentication/Front/dashboard.html
+++ b/SecurityAndAuthentication/Front/dashboard.html
@@ -88,7 +88,10 @@
                 <h1>Welcome to Dashboard</h1>
                 <p id="welcomeMessage">Loading...</p>
             </div>
-            <button id="btnLogout" class="logout-btn">Logout</button>
+            <div>
+                <button id="btnAdminPanel" class="logout-btn" style="background: #4caf50; margin-right: 10px; display: none;">Admin Panel</button>
+                <button id="btnLogout" class="logout-btn">Logout</button>
+            </div>
         </div>
 
         <div class="user-profile">
@@ -135,6 +138,11 @@
                     authManager.logout();
                 }
             });
+
+            // Configurar admin panel button
+            document.getElementById('btnAdminPanel').addEventListener('click', function() {
+                window.location.href = 'admin.html';
+            });
         });
 
         // Carregar dados do perfil
@@ -161,6 +169,10 @@
                             <span>${userData.email}</span>
                         </div>
                         <div class="profile-item">
+                            <strong>Role:</strong>
+                            <span style="color: #1976d2; font-weight: bold;">${userData.role}</span>
+                        </div>
+                        <div class="profile-item">
                             <strong>Account Created:</strong>
                             <span>${new Date(userData.createdAt).toLocaleDateString()}</span>
                         </div>
@@ -169,6 +181,11 @@
                             <span>${userData.isSubscribed ? 'Yes' : 'No'}</span>
                         </div>
                     `;
+                    
+                    // Show admin panel button for admin users
+                    if (userData.role === 'Admin') {
+                        document.getElementById('btnAdminPanel').style.display = 'inline-block';
+                    }
                 } else {
                     // Usar dados básicos do login
                     profileDiv.innerHTML = `
@@ -183,6 +200,10 @@
                         <div class="profile-item">
                             <strong>Email:</strong>
                             <span>${user.email}</span>
+                        </div>
+                        <div class="profile-item">
+                            <strong>Role:</strong>
+                            <span style="color: #1976d2; font-weight: bold;">${user.role || 'User'}</span>
                         </div>
                     `;
                 }
@@ -209,7 +230,7 @@
                         usersDiv.innerHTML = users.map(user => `
                             <div class="user-card">
                                 <div>
-                                    <strong>${user.username}</strong><br>
+                                    <strong>${user.username}</strong> <span style="color: #1976d2; font-size: 12px;">[${user.role}]</span><br>
                                     <small>${user.email}</small>
                                 </div>
                                 <div>
