feat: Implementar sistema completo de usuário master
 Criação Automática de Master User:
- Usuário admin criado automaticamente no primeiro run
- Credenciais padrão: admin@system.com / admin / Admin123!
- Configurável via environment variables (MASTER_USER_*)
- Verificação para não duplicar administradores existentes

 Funcionalidades Adicionadas:
- Endpoint POST /api/auth/change-password para troca de senha
- ChangePasswordDto com validação de senhas
- Página change-password.html com interface moderna
- Botão 'Change Password' no dashboard

 Melhorias de Segurança:
- Logs detalhados com recomendações de segurança
- Hash BCrypt para senha do master user
- Validação automática de tokens para troca de senha
- Interface protegida por autenticação

 Documentação Completa:
- MASTER_USER_GUIDE.md com guia completo
- Fluxo recomendado de primeiro uso
- Configuração via environment variables
- Boas práticas de segurança

 Sistema Production-Ready:
- Criação automática e segura de admin
- Interface completa para gerenciamento
- Autenticação e autorização robustas
- Pronto para uso em produção

--- a/SecurityAndAuthentication/Front/dashboard.html
+++ b/SecurityAndAuthentication/Front/dashboard.html
@@ -89,6 +89,7 @@
                 <p id="welcomeMessage">Loading...</p>
             </div>
             <div>
+                <button id="btnChangePassword" class="logout-btn" style="background: #ff9800; margin-right: 10px;">Change Password</button>
                 <button id="btnAdminPanel" class="logout-btn" style="background: #4caf50; margin-right: 10px; display: none;">Admin Panel</button>
                 <button id="btnLogout" class="logout-btn">Logout</button>
             </div>
@@ -137,6 +138,11 @@
                 if (confirm('Are you sure you want to logout?')) {
                     authManager.logout();
                 }
+            });
+
+            // Configurar change password button
+            document.getElementById('btnChangePassword').addEventListener('click', function() {
+                window.location.href = 'change-password.html';
             });
 
             // Configurar admin panel button
